# employee_reward

./: README.md  pyproject.toml
.github/workflows/: ci.yml
employee_reward/: hooks.py  modules.txt
employee_reward/employee_reward/custom/: employee.json  salary_structure_assignment.json
employee_reward/employee_reward/doctype/effective_date_notice/: effective_date_notice.js  effective_date_notice.json  effective_date_notice.py  test_effective_date_notice.py
employee_reward/employee_reward/doctype/reward_allocation/: reward_allocation.js  reward_allocation.json  reward_allocation.py  test_reward_allocation.py
employee_reward/fixtures/: custom_field.json
employee_reward/overrides/: employee.py
